# mdde-semantic

./: CLAUDE.md  README.md  SETUP.md  pyproject.toml
demos/semantic_layer/: README.md
docs/adrs/: ADR-244-Ontology-Support.md  ADR-245-Metrics-Layer.md  ADR-246-AI-Agent-Context.md  ADR-301-Semantic-Layer-Module.md  ADR-325-Aboutness-Layer.md  ADR-359-Business-Ontology-Layer.md  ADR-364-sql-executable-ontology.md  ADR-368-dax-generator-from-semantic-definitions.md  ADR-368-dax-measure-pattern-library.md  ADR-371-Semantic-Layer-Enhancements.md  ADR-372-Intelligent-Semantic-Layer.md  ADR-375-Verified-Query-Repository.md  ADR-412-USS-Aware-Text-to-SQL.md
docs/articles/: 2026-02-27_Your-Data-Model-Is-The-Semantic-Layer.md  2026-03-11_Why-Your-Semantic-Layer-Needs-Ontology.md  2026-03-13_Building-a-BI-Agnostic-Semantic-Layer-MDDE-Approach.md  2026-03-13_Intelligent-Semantic-Layer-When-Data-Explains-Why.md  2026-03-14_The-Semantic-Layer-May-Be-a-Symptom.md  2026-03-18_Semantic-SQL-Change-Tracking-Beyond-Text-Diffs.md  2026-03-23_Ontology-Firewall-for-Metadata-Driven-Data-Engineering.md  2026-03-29_Semantic-Cartography-for-MDDE.md
docs/inspiration/: DBML_SEMANTIC_LAYER_INSPIRATION_FOR_MDDE.md
docs/modules/: aboutness.md
docs/research/: knowledge-plane-analysis.md
docs/roadmap/: semantic.md
src/mdde/: __init__.py
src/mdde/semantic/: __init__.py  (+3 more)
tests/: conftest.py  test_aboutness.py  test_knowledge_graph_export.py  test_semantic.py  test_semantic_discoverer.py  test_semantic_layer.py
tests/semantic/: test_business_ontology.py  test_executable_ontology.py
(+35 files in other folders)
